[gd_scene load_steps=24 format=3 uid="uid://cuohw8cqjwppe"]

[ext_resource type="Script" path="res://UI/Resources/resources.gd" id="1_4lnv3"]
[ext_resource type="Texture2D" uid="uid://cxpns1qi0gie6" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Gold Coin/01.png" id="1_g5tw0"]
[ext_resource type="Theme" uid="uid://b32l21r5ntiqo" path="res://Themes/game_theme.tres" id="1_y24xl"]
[ext_resource type="Texture2D" uid="uid://cfndov423mxgy" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Gold Coin/02.png" id="2_xmjl4"]
[ext_resource type="Texture2D" uid="uid://dcvd5rceojryu" path="res://art/Treasure Hunters/Wood and Paper UI/Sprites/Inventory/16.png" id="3_4ube4"]
[ext_resource type="Texture2D" uid="uid://caknffvmwk2hl" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Gold Coin/03.png" id="3_qayme"]
[ext_resource type="Texture2D" uid="uid://cals7kgrmu720" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Gold Coin/04.png" id="4_lgjdd"]
[ext_resource type="Texture2D" uid="uid://4gqxfssj6p85" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Green Bottle/01.png" id="9_qmrrp"]
[ext_resource type="Texture2D" uid="uid://ds2javyn77nuf" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Green Bottle/02.png" id="10_6oh0b"]
[ext_resource type="Texture2D" uid="uid://cjsu566qavhu8" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Green Bottle/03.png" id="11_woxij"]
[ext_resource type="Texture2D" uid="uid://dnv7s7ncd4poa" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Green Bottle/04.png" id="12_75w76"]
[ext_resource type="Texture2D" uid="uid://c06edweac3dp5" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Green Bottle/05.png" id="13_qo8mp"]
[ext_resource type="Texture2D" uid="uid://cia7comevnyi5" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Green Bottle/06.png" id="14_31smh"]
[ext_resource type="Texture2D" uid="uid://bhx0bvlqerpb4" path="res://art/Treasure Hunters/Pirate Treasure/Sprites/Green Bottle/07.png" id="15_hqhlx"]
[ext_resource type="Texture2D" uid="uid://x6glt1n666oe" path="res://art/Emilys Buttons/Button - clear.png" id="18_4p4ly"]
[ext_resource type="Texture2D" uid="uid://d2lbvc1ui5fyn" path="res://art/Emilys Buttons/Button - clear hover.png" id="19_778u7"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_el7py"]
texture = ExtResource("3_4ube4")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_3n6s4"]
frames = 4
speed_scale = 4.0
frame_0/texture = ExtResource("1_g5tw0")
frame_1/texture = ExtResource("2_xmjl4")
frame_1/duration = 1.0
frame_2/texture = ExtResource("3_qayme")
frame_2/duration = 1.0
frame_3/texture = ExtResource("4_lgjdd")
frame_3/duration = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_ng2k5"]
font_size = 32

[sub_resource type="GDScript" id="GDScript_81r2v"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = \"Gub Bucks: \" + str(Game.GubBucks)

func _on_button_pressed():
	Game.GubBucks += 100
	Utils.save_game()
"

[sub_resource type="AnimatedTexture" id="AnimatedTexture_sa6gx"]
frames = 7
speed_scale = 4.0
frame_0/texture = ExtResource("9_qmrrp")
frame_1/texture = ExtResource("10_6oh0b")
frame_1/duration = 1.0
frame_2/texture = ExtResource("11_woxij")
frame_2/duration = 1.0
frame_3/texture = ExtResource("12_75w76")
frame_3/duration = 1.0
frame_4/texture = ExtResource("13_qo8mp")
frame_4/duration = 1.0
frame_5/texture = ExtResource("14_31smh")
frame_5/duration = 1.0
frame_6/texture = ExtResource("15_hqhlx")
frame_6/duration = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_wnw8r"]
font_size = 32

[sub_resource type="GDScript" id="GDScript_webu3"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	text = \"Dew Drops: \" + str(Game.DewDrops)


func _on_dew_button_pressed():
	Game.DewDrops += 1
	Utils.save_game() # Replace with function body.
"

[node name="Resources" type="CanvasLayer"]
scale = Vector2(0.6, 0.6)
transform = Transform2D(0.6, 0, 0, 0.6, 0, 0)
script = ExtResource("1_4lnv3")

[node name="GoldPanel" type="Panel" parent="."]
offset_left = 80.0
offset_top = 2973.0
offset_right = 480.0
offset_bottom = 3079.0
theme = ExtResource("1_y24xl")
theme_override_styles/panel = SubResource("StyleBoxTexture_el7py")

[node name="GoldCoin" type="TextureRect" parent="GoldPanel"]
layout_mode = 2
offset_top = 13.6665
offset_right = 80.0
offset_bottom = 93.6665
texture = SubResource("AnimatedTexture_3n6s4")
expand_mode = 4
stretch_mode = 5

[node name="GoldLabel" type="Label" parent="GoldPanel"]
layout_mode = 2
offset_left = 93.3333
offset_top = 26.9998
offset_right = 293.333
offset_bottom = 79.9998
label_settings = SubResource("LabelSettings_ng2k5")
horizontal_alignment = 1
script = SubResource("GDScript_81r2v")

[node name="DewPanel" type="Panel" parent="."]
offset_left = 80.0
offset_top = 3080.0
offset_right = 480.0
offset_bottom = 3186.0
theme = ExtResource("1_y24xl")
theme_override_styles/panel = SubResource("StyleBoxTexture_el7py")

[node name="DewDrops" type="TextureRect" parent="DewPanel"]
layout_mode = 2
offset_left = 13.3333
offset_top = 13.3333
offset_right = 80.3333
offset_bottom = 80.3333
texture = SubResource("AnimatedTexture_sa6gx")
expand_mode = 4
stretch_mode = 5

[node name="DewLabel" type="Label" parent="DewPanel"]
layout_mode = 2
offset_left = 93.3333
offset_top = 26.6665
offset_right = 293.333
offset_bottom = 79.6665
label_settings = SubResource("LabelSettings_wnw8r")
horizontal_alignment = 1
script = SubResource("GDScript_webu3")

[node name="GoldButton" type="TextureButton" parent="."]
offset_left = 106.667
offset_top = 2680.0
offset_right = 366.667
offset_bottom = 2824.0
texture_normal = ExtResource("18_4p4ly")
texture_pressed = ExtResource("19_778u7")

[node name="Label" type="Label" parent="GoldButton"]
modulate = Color(0.0901961, 0.0901961, 0.0901961, 1)
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 125.0
offset_bottom = 66.0
scale = Vector2(2.2, 2.2)
text = "Mine gold"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GemButton" type="TextureButton" parent="."]
visible = false
offset_left = 533.333
offset_top = 733.333
offset_right = 793.333
offset_bottom = 877.333
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("18_4p4ly")
texture_pressed = ExtResource("19_778u7")

[node name="DewButton" type="TextureButton" parent="."]
visible = false
offset_left = 533.333
offset_top = 1053.33
offset_right = 793.333
offset_bottom = 1197.33
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("18_4p4ly")
texture_pressed = ExtResource("19_778u7")

[connection signal="pressed" from="GoldButton" to="GoldPanel/GoldLabel" method="_on_button_pressed"]
